Python3/src/26 Work in progress/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    LEFT_SQUARE_BRACKET
    RIGHT_SQUARE_BRACKET
    QUOTE
    NUMBER
    SPACE
    TYPE
    END_ROW
    BLANK_COL
    title

Grammar

Rule 0     S' -> spreadsheet
Rule 1     spreadsheet -> headings blank_lines
Rule 2     blanks -> BAR blanks
Rule 3     blanks -> BAR
Rule 4     blank_line -> blanks NL
Rule 5     blank_lines -> blank_line blank_lines
Rule 6     blank_lines -> blank_line
Rule 7     headings -> HEADINGS NL
Rule 8     line -> LINE
Rule 9     number -> LINE BAR
Rule 10    option1 -> blanks line blanks
Rule 11    option1 -> blanks
Rule 12    options -> line blanks NL
Rule 13    part1 -> question type option1 NL
Rule 14    part2 -> blanks options NL
Rule 15    part3 -> blanks options NL
Rule 16    part3 -> NL
Rule 17    question -> BAR BAR questionTitle
Rule 18    question -> number section questionTitle
Rule 19    questionBlocks -> questionBlock questionBlocks
Rule 20    questionBlocks -> questionBlock
Rule 21    questionBlock -> blank_line
Rule 22    questionTitle -> line BAR
Rule 23    section -> LINE BAR
Rule 24    type -> line BAR

Terminals, with rules where they appear

BAR                  : 2 3 9 17 17 22 23 24
BLANK_COL            : 
END_ROW              : 
HEADINGS             : 7
LEFT_SQUARE_BRACKET  : 
LINE                 : 8 9 23
NL                   : 4 7 12 13 14 15 16
NUMBER               : 
QUOTE                : 
RIGHT_SQUARE_BRACKET : 
SPACE                : 
TYPE                 : 
error                : 
title                : 

Nonterminals, with rules where they appear

blank_line           : 5 6 21
blank_lines          : 1 5
blanks               : 2 4 10 10 11 12 14 15
headings             : 1
line                 : 10 12 22 24
number               : 18
option1              : 13
options              : 14 15
part1                : 
part2                : 
part3                : 
question             : 13
questionBlock        : 19 20
questionBlocks       : 19
questionTitle        : 17 18
section              : 18
spreadsheet          : 0
type                 : 13

Parsing method: LALR

state 0

    (0) S' -> . spreadsheet
    (1) spreadsheet -> . headings blank_lines
    (7) headings -> . HEADINGS NL

    HEADINGS        shift and go to state 3

    spreadsheet                    shift and go to state 1
    headings                       shift and go to state 2

state 1

    (0) S' -> spreadsheet .



state 2

    (1) spreadsheet -> headings . blank_lines
    (5) blank_lines -> . blank_line blank_lines
    (6) blank_lines -> . blank_line
    (4) blank_line -> . blanks NL
    (2) blanks -> . BAR blanks
    (3) blanks -> . BAR

    BAR             shift and go to state 7

    blank_lines                    shift and go to state 4
    blank_line                     shift and go to state 5
    blanks                         shift and go to state 6

state 3

    (7) headings -> HEADINGS . NL

    NL              shift and go to state 8


state 4

    (1) spreadsheet -> headings blank_lines .

    $end            reduce using rule 1 (spreadsheet -> headings blank_lines .)


state 5

    (5) blank_lines -> blank_line . blank_lines
    (6) blank_lines -> blank_line .
    (5) blank_lines -> . blank_line blank_lines
    (6) blank_lines -> . blank_line
    (4) blank_line -> . blanks NL
    (2) blanks -> . BAR blanks
    (3) blanks -> . BAR

    $end            reduce using rule 6 (blank_lines -> blank_line .)
    BAR             shift and go to state 7

    blank_line                     shift and go to state 5
    blank_lines                    shift and go to state 9
    blanks                         shift and go to state 6

state 6

    (4) blank_line -> blanks . NL

    NL              shift and go to state 10


state 7

    (2) blanks -> BAR . blanks
    (3) blanks -> BAR .
    (2) blanks -> . BAR blanks
    (3) blanks -> . BAR

    NL              reduce using rule 3 (blanks -> BAR .)
    BAR             shift and go to state 7

    blanks                         shift and go to state 11

state 8

    (7) headings -> HEADINGS NL .

    BAR             reduce using rule 7 (headings -> HEADINGS NL .)


state 9

    (5) blank_lines -> blank_line blank_lines .

    $end            reduce using rule 5 (blank_lines -> blank_line blank_lines .)


state 10

    (4) blank_line -> blanks NL .

    BAR             reduce using rule 4 (blank_line -> blanks NL .)
    $end            reduce using rule 4 (blank_line -> blanks NL .)


state 11

    (2) blanks -> BAR blanks .

    NL              reduce using rule 2 (blanks -> BAR blanks .)

